docroot/themes/custom/shops/style/scss/components/_header.scss
.header {
  @extend .bg-white;

  &-adv,
  &-primary {
    z-index: 500;

    @extend .position-relative;
    @extend .bg-white;
    @extend .d-lg-block;
    @extend .d-none;

    & > .content {
      @extend .bg-white;
      @extend .container;

      & > .wrapper {
        @extend .row;
      }
    }
  }

  &-primary {
    @extend .pb-2;
    @extend .pt-3;

    & > .content {
      & > .wrapper {
        @extend .d-flex;
        @extend .col-lg-12;
        @extend .flex-row;
        @extend .justify-content-between;
      }
    }
  }

  &-secondary {
    z-index: 500;

    background-color: $gray-900;

    @extend .position-relative;

    & > .content {
      @extend .container;

      & > .wrapper {
        @extend .row;
      }
    }
  }
}

// Logo.
#block-shops-branding {
  h1 {
    @extend .h2;
  }

  a {
    letter-spacing: .2rem;

    color: $green;

    @extend .text-capitalize;
    @include hover {
      text-decoration: none;

      color: $green;
    }

    span {
      @extend .text-dark;
      @extend .position-relative;
      @include icoMoon('treadmill', 'before');

      &:after {
        display: inline-block;
      }

      &:after {
        top: 32px;
        right: 8px;

        content: '.SHOP';

        font-size: 8px;

        @extend .text-capitalize;
        @extend .position-absolute;
      }
    }
  }
}

// Info menu.
#block-header-infomenu {
  @extend .ml-auto;
  @extend .d-lg-block;
  @extend .d-none;

  ul {
    @extend .nav;
  }

  li {
    @extend .nav-item;

    a {
      color: $gray-700;

      @extend .nav-link;
      @extend .pl-lg-2;
      @extend .pl-xl-3;
      @extend .pr-lg-2;
      @extend .pr-xl-3;
      @include hover {
        text-decoration: $link-hover-decoration;

        color: $orange;
      }
    }

    &:first-child {
      a {
        color: $orange;

        font-weight: 600;
      }
    }
  }

  .is-active {
    @extend .active;
  }
}

// Phone numbers.
#block-headerphones {
  max-width: 158px;

  @extend .ml-auto;
  @extend .w-100;
  @extend .d-lg-block;
  @extend .d-none;

  a {
    @extend .h6;
  }

  .first-number {
    width: 100%;
    max-width: 118px;
  }

  li {
    &:last-child {
      @extend .text-center;
      @extend .small;
    }
  }
}

// Switch language.
#block-languageswitcher {
  max-width: 85px;

  @extend .w-100;
  @extend .d-lg-block;
  @extend .d-none;
}

#block-shops-main-menu {
  background-color: $gray-800;

  @extend .d-lg-block;
  @extend .d-none;
  @extend .col-lg-3;
}

#block-shops-search {
  padding: 10px 14px;

  @extend .position-relative;
  @extend .col-lg-6;
  @extend .col-10;

  .js-form-type-search {
    @extend .w-100;
  }
  .form-search {
    @extend .border-0;
    @extend .w-100;
    @extend .form-control-sm;
    @extend .form-control;
  }
}

#search-block-form {
  @extend .d-flex;
}

